Fixed "headline issue" in main.js.
Previously, you couldn't add a headline. Also, the key to the questions and answers was "addObj" so I changed it to qaPairs (for question/answer pair).

--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -12,6 +12,7 @@
             <h1>This is the Create-page</h1>
             <p>This is the page where you can create your study sets.</p>
         </header>
+        <h1 id="hello">Hello!? This is winows tech support. How...</h1>
         <main>
             <form>
                 <label for="headlineFieldInput">Headline: </label><br>
