--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -13,11 +13,23 @@
             <p>This is the page where you can create your study sets.</p>
         </header>
         <main>
-            <div>
-                <div class="dropdown">
-                    <button class="link dropdown-head" onclick="showDropdown()">Subject</button>
-                    <div class="dropdown-menu" id="dropdown1">
-                        Content, why?
+            <div class="dropdown">
+                <button class="link dropdown-head" onclick="showDropdown()">Subject</button>
+                <div class="dropdown-menu info-grid" id="dropdown1">
+                    <div>
+                        <div>What subject is the set about?</div>
+                        <div class="subject">
+                            <a href="#" class="subjectLink">Historia</a>
+                            <a href="#" class="subjectLink">Geografi</a>
+                            <a href="#" class="subjectLink">Samhällskunskap</a>
+                            <a href="#" class="subjectLink">Religion</a>
+                            <a href="#" class="subjectLink">Fysik</a>
+                            <a href="#" class="subjectLink">Kemi</a>
+                            <a href="#" class="subjectLink">Biologi</a>
+                            <a href="#" class="subjectLink">Svenska</a>
+                            <a href="#" class="subjectLink">Engelska</a>
+                            <a href="#" class="subjectLink">Matematik</a>
+                        </div>
                     </div>
                 </div>
             </div>
