Small changes to dropdown.

--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -19,7 +19,7 @@
                     <div>
                         <div>What subject is the set about?</div>
                         <div class="subject">
-                            <a href="#" class="subjectLink">Historia</a>
+                            <a href="#" class="subjectLink" onclick="chooseSubject('Historia')">Historia</a>
                             <a href="#" class="subjectLink">Geografi</a>
                             <a href="#" class="subjectLink">Samhällskunskap</a>
                             <a href="#" class="subjectLink">Religion</a>
