--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -10,7 +10,7 @@
         
         <header>
             <h1>This is the Create-page</h1>
-            <p>This is the page where you can create your study sets.</p>
+            <p>This is the page where you can create your study sets. Let's get to it!</p>
         </header>
         <main>
             <div class="dropdown">
