Added the alternative "Annat" to the dropdown.

--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -29,6 +29,7 @@
                             <a href="javascript:chooseSubject('Svenska')" class="subjectLink">Svenska</a>
                             <a href="javascript:chooseSubject('Engelska')" class="subjectLink">Engelska</a>
                             <a href="javascript:chooseSubject('Matematik')" class="subjectLink">Matematik</a>
+                            <a href="javascript:chooseSubject('Annat')" class="subjectLink">Annat</a>
                         </div>
                     </div>
                 </div>
