Started working on the studyChosenSet-page.
No dropdowns are working right now.

--- a/createQuestionSet.html
+++ b/createQuestionSet.html
@@ -14,7 +14,7 @@
         </header>
         <main>
             <div class="dropdown">
-                <input type="button" class="link dropdown-head" onclick="showDropdown()" id="dropdownButton" value="Subject">
+                <input type="button" class="link dropdown-head" onclick="showDropdown('1')" id="dropdownButton" value="Subject">
                 <div class="dropdown-menu info-grid" id="dropdown1">
                     <div>
                         <div>What subject is the set about?</div>
